exer-8:fix run migration
