# docs/swagger.json
@@ -76,7 +76,12 @@
                             "$ref": "#/definitions/github_com_homework_lab_internal_models_dto_api.MessageResponse"
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
             },
             "post": {
                 "consumes": [
@@ -119,7 +124,12 @@
                             "$ref": "#/definitions/github_com_homework_lab_internal_models_dto_api.Response-github_com_homework_lab_internal_models_dto_api_bookmark_BookmarkInfo"
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
             }
         },
         "/v1/bookmarks/{id}": {
@@ -171,7 +181,12 @@
                             "$ref": "#/definitions/github_com_homework_lab_internal_models_dto_api.MessageResponse"
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
             },
             "delete": {
                 "consumes": [
@@ -212,7 +227,12 @@
                             "$ref": "#/definitions/github_com_homework_lab_internal_models_dto_api.MessageResponse"
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
             }
         },
         "/v1/links/redirect/{code}": {
@@ -308,7 +328,12 @@
                             "$ref": "#/definitions/github_com_homework_lab_internal_models_dto_api.Response-any"
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
             },
             "put": {
                 "description": "Edit current user",
@@ -352,7 +377,12 @@
                             "$ref": "#/definitions/internal_handler_user.updateUserReposonse"
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
             }
         },
         "/v1/users/login": {
