# internal/handler/bookmark/delete.go
@@ -19,9 +19,7 @@ import (
 // @Failure      400  {object}  api.MessageResponse
 // @Failure      500  {object}  api.MessageResponse
 // @Router /v1/bookmarks/{id} [delete]
-// @securityDefinitions.apiKey JWT
-// @in header
-// @name Authorization
+// @Security JWT
 func (handler *bookmarkHandler) DeleteBookmark(c *gin.Context) {
 	id := c.Params.ByName("id")
 	// authorization
